TAG: dlautils-4-2-0-3
DATE: 03/17/2009
STAFF: sc
CHANGES:
1) DBCleanser - removed '-x'
2) JobStreamTemplate.sh - updated 

TAG: dlautils-4-2-0-2
DATE: 02/03/2009
STAFF: lec
CHANGES:
1) TR9451; add DBCleanser (originally in seqdb_engine)

TAG: dlautils-4-2-0-1
DATE: 01/27/2009
STAFF: lec
CHANGES:
1) TR9451; add fastaDupRemover.awk (originally in seqdb_engine)

TAG: dlautils-3-5-4-2
DATE: 10/11/2007
STAFF: dbm
CHANGES:
1) Added -x option to DLAInstall script

TAG: dlautils-3-5-4-1
DATE: 8/9/2007
STAFF: dbm
CHANGES:
1) Fixed bug where Configuration.default was set up for C-shell.

TAG: dlautils-3-5-1-5
DATE: 2/9/2007
STAFF: dbm
CHANGES:
1) Added fileSize to load queue report

TAG: dlautils-3-5-1-4
DATE: 11/15/2006
STAFF: dbm
CHANGES:
1) Removed code that copies index.html to /data/loads/... directory.

TAG: dlautils-3-5-1-3
DATE: 11/08/2006
STAFF: dbm
CHANGES:
1) Added Configuration.default, loadQueueReport.py, loadQueueReport.sh

TAG: dlautils-3-5-1-2
DATE: 11/03/2006
STAFF: sc
CHANGES:
1) added runSomethingNTimes, this came out of TR8011
2) removed DLAInstall_old

TAG: dlautils-3-5-1-1
DATE: 09/06/2006
STAFF: sc
CHANGES:
1) merge build 36 branch to trunk

TAG: dlautils-build36-1
DATE: 08/01/2006
STAFF: sc
CHANGES: TR7801
1) DLAInstall_old - original DLAInstall Script
2) DLAInstall - updated to install product converted to mgiconfig; 
   removal of config file parameter checking, sourcing of config files and 
   linking to the old common.config

TAG: dlautils-build36-BP
DATE: 07/31/2006
STAFF: sc
CHANGES: Branch point tag for build36 TR7810

TAG: dlautils-3-5-0-1
DATE: 04/20/2006
STAFF: lec
CHANGES:
1) MGi 3.5; tr7062 branch merge

TAG: dlautils-tr7062-1
DATE: 12/05/2005
STAFF: lec
CHANGES: tag for TR 7062

TAG: dlautils-tr7062-BP
DATE: 11/29/2005
STAFF: dbm
RELEASE: Development
CHANGES: Branch point tag for TR 7062

TAG: dlautils-3-2-0-0
DATE: 08/08/2005
STAFF: mbw
RELEASE: Production
CHANGES: no longer validates INPUTDIR parameter

TAG: dlautils-3-1-1-1