@@ -1,8 +1,5 @@
 #!/bin/sh
 #
-#  $Header$
-#  $Name$
-#
 #  DLAJobStreamFunctions.sh
 ###########################################################################
 #
@@ -544,43 +541,3 @@ cleanDir ()
 	fi
     done
 }
-
-#  $Log$
-#  Revision 1.4.4.2  2005/11/30 13:59:59  dbm
-#  Minor fix
-#
-#  Revision 1.4  2004/11/03 17:22:12  sc
-#  removed a debug echo
-#
-#  Revision 1.3  2004/10/19 16:26:58  sc
-#  added param to preload and new function cleanDir
-#
-#  Revision 1.2  2004/06/30 18:16:42  dbm
-#  Added MAIL_LOADNAME for mailLog and call mailLog from postload
-#
-#  Revision 1.1  2004/06/16 15:38:37  dbm
-#  New
-#
-#
-###########################################################################
-#
-# Warranty Disclaimer and Copyright Notice
-#
-#  THE JACKSON LABORATORY MAKES NO REPRESENTATION ABOUT THE SUITABILITY OR
-#  ACCURACY OF THIS SOFTWARE OR DATA FOR ANY PURPOSE, AND MAKES NO WARRANTIES,
-#  EITHER EXPRESS OR IMPLIED, INCLUDING MERCHANTABILITY AND FITNESS FOR A
-#  PARTICULAR PURPOSE OR THAT THE USE OF THIS SOFTWARE OR DATA WILL NOT
-#  INFRINGE ANY THIRD PARTY PATENTS, COPYRIGHTS, TRADEMARKS, OR OTHER RIGHTS.
-#  THE SOFTWARE AND DATA ARE PROVIDED "AS IS".
-#
-#  This software and data are provided to enhance knowledge and encourage
-#  progress in the scientific community and are to be used only for research
-#  and educational purposes.  Any reproduction or use for commercial purpose
-#  is prohibited without the prior express written permission of The Jackson
-#  Laboratory.
-#
-# Copyright \251 1996, 1999, 2002, 2004 by The Jackson Laboratory
-#
-# All Rights Reserved
-#
-##########################################################################
